--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,200 @@
+* {
+  background-origin: border-box;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 0;
+  background-color: rgb(236, 235, 235);
+  font-size: 16px;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.form {
+  position: relative;
+  z-index: 6;
+  margin-top: 0.9rem;
+  width: 80%;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border-radius: 4px;
 }
 
-.App-link {
-  color: #61dafb;
+.tittle {
+  position: relative;
+  z-index: 5;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.form input,
+.form_button {
+  font-size: 1em;
+  position: relative;
+  z-index: 10;
+  padding: 0.7em 1.3em;
+  border: none;
+  outline: none;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+input {
+  width: 65%;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.form_button {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.result {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 2px;
+  margin-top: 1.5rem;
+  width: 65%;
+  padding: 0.5rem 1.2rem;
+  box-shadow: 0 4px 12px rgb(0 0 0 / 3%);
+  background-color: white;
+}
+
+.app_one {
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  border-radius: 5px;
+  background-color: #2196f32e;
+  padding: 1rem;
+}
+
+.ball {
+  z-index: 2;
+  border-radius: 50%;
+  position: absolute;
+}
+
+.one {
+  top: 0;
+  right: 0;
+  width: 340px;
+  height: 340px;
+  filter: blur(15px);
+  background-color: #ffc107;
+
+  animation: move2 22s linear infinite alternate;
+}
+
+.two {
+  top: -10px;
+  width: 400px;
+  height: 250px;
+  filter: blur(2px);
+  background-color: rgb(255 236 59);
+  animation: move3 12s linear infinite alternate;
+}
+
+.three {
+  width: 280px;
+  height: 280px;
+  left: 0;
+  top: 0;
+  filter: blur(10px);
+  background-color: #e91e63;
+  animation: move 15s linear infinite alternate;
+}
+
+@keyframes move {
+  0% {
+    width: 40%;
+    transform: translate(0px, 10px);
   }
-  to {
-    transform: rotate(360deg);
+
+  50% {
+    width: 60%;
+    transform: translate(20px, -40px);
+  }
+
+  100% {
+    width: 75%;
+    transform: translate(30px, 50px);
+  }
+}
+
+@keyframes move2 {
+  0% {
+    width: 40%;
+    transform: translate(0px, 40px);
+  }
+
+  50% {
+    width: 50%;
+    transform: translate(-30px, -180px);
+  }
+
+  100% {
+    width: 80%;
+    transform: translate(-10px, 50px);
+  }
+}
+
+@keyframes move3 {
+  0% {
+    border-radius: 30% 80% 50% 20%;
+  }
+
+  50% {
+    border-radius: 60% 80% 90% 40%;
+  }
+
+  100% {
+    border-radius: 30% 80% 60% 80%;
+  }
+}
+
+@media (max-width: 646px) {
+  .result {
+    width: 85%;
+  }
+}
+
+@media (max-width: 522px) {
+  body {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 389px) {
+  body {
+    font-size: 10px;
+  }
+  .two {
+    width: 199px;
+    height: 150px;
+  }
+}
+
+@media (max-width: 340px) {
+  .result {
+    width: 95%;
+  }
+}
+
+@media (max-width: 300px) {
+  body {
+    font-size: 8px;
   }
 }
